--- a/spa.toml
+++ b/spa.toml
@@ -3,4 +3,13 @@ port = "8080"
 public_dir = "."
 index_file = "index.html"
 cache_control = 100
-condition = "http://127.0.0.1:7173/api/restapi/v1/companies/1001/cities"
+# condition = "http://127.0.0.1:7173/api/restapi/v1/companies/1001/cities"
+condition = "http://127.0.0.1:7173/api/restapi/v1"
+
+[[conditions]]
+source = 'api/restapi/v1'
+dest = 'http://127.0.0.1:7173/api/restapi/v1'
+
+[[conditions]]
+source = '11'
+dest = '2'
