--- a/spa.toml
+++ b/spa.toml
@@ -8,7 +8,7 @@ condition = "http://127.0.0.1:7173/api/restapi/v1"
 
 [[conditions]]
 source = 'api/restapi/v1'
-dest = 'http://127.0.0.1:7173/api/restapi/v1'
+dest = 'http://127.0.0.1:7173/'
 
 [[conditions]]
 source = '11'
